[gd_scene load_steps=20 format=3 uid="uid://bqa12mxh2fftd"]

[ext_resource type="Script" path="res://scripts/bee_hive.gd" id="1_juajy"]
[ext_resource type="Texture2D" uid="uid://f5uxf7haeika" path="res://sprites/pvv_sunpea.png" id="2_3pwes"]
[ext_resource type="Texture2D" uid="uid://dwpp2j2ysf3n6" path="res://assets/characters/bee hive/1.png" id="2_tc30q"]
[ext_resource type="Texture2D" uid="uid://cklwgj10vvn5o" path="res://assets/characters/bee hive/2.png" id="3_kjpgf"]
[ext_resource type="PackedScene" uid="uid://kqjgpwrln2xx" path="res://scenes/progress_bar.tscn" id="3_ouusg"]
[ext_resource type="PackedScene" uid="uid://dvy7lryr5q3ee" path="res://scenes/health_bar.tscn" id="4_hejuf"]
[ext_resource type="Texture2D" uid="uid://5u3at1bphw4" path="res://assets/characters/bee hive/3.png" id="4_lddho"]
[ext_resource type="Texture2D" uid="uid://dqst624n7wdxw" path="res://assets/characters/bee hive/4.png" id="5_qpx2t"]
[ext_resource type="AudioStream" uid="uid://brn63h7bwwoey" path="res://assets/sound/juicy-splash-104642.mp3" id="9_m382e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dydde"]
atlas = ExtResource("2_3pwes")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmbyo"]
atlas = ExtResource("2_3pwes")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaa22"]
atlas = ExtResource("2_3pwes")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqqym"]
atlas = ExtResource("2_3pwes")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86f57"]
atlas = ExtResource("2_3pwes")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwqyx"]
atlas = ExtResource("2_3pwes")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_crbfa"]
atlas = ExtResource("2_3pwes")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwjxr"]
atlas = ExtResource("2_3pwes")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_v6ywa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tc30q")
}, {
"duration": 1.0,
"texture": ExtResource("3_kjpgf")
}, {
"duration": 1.0,
"texture": ExtResource("4_lddho")
}, {
"duration": 1.0,
"texture": ExtResource("5_qpx2t")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.4,
"texture": SubResource("AtlasTexture_dydde")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_xmbyo")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_iaa22")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_nqqym")
}, {
"duration": 2.1,
"texture": SubResource("AtlasTexture_86f57")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_iwqyx")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_crbfa")
}],
"loop": true,
"name": &"mini_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwjxr")
}],
"loop": true,
"name": &"seed",
"speed": 0.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3qlsk"]
radius = 9.0
height = 24.0

[node name="sun_bloom" type="Node2D"]
z_index = 1
script = ExtResource("1_juajy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5.68434e-14, -5)
scale = Vector2(0.215625, 0.215625)
sprite_frames = SubResource("SpriteFrames_v6ywa")
animation = &"idle"
frame_progress = 0.561763
speed_scale = 0.8

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="sun_timer" type="Timer" parent="."]
process_callback = 0

[node name="timer_bar" parent="." instance=ExtResource("3_ouusg")]
modulate = Color(0.509804, 0.823529, 0.509804, 1)
position = Vector2(-21, 8)
scale = Vector2(0.2, 0.2)

[node name="health_bar" parent="." instance=ExtResource("4_hejuf")]
modulate = Color(0.960784, 0.25098, 0.298039, 1)
position = Vector2(-21, -19)
scale = Vector2(0.2, 0.2)

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CapsuleShape2D_3qlsk")

[node name="enter_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_m382e")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="sun_timer" to="." method="_on_sun_timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
